# aiqualin

./: .gitignore  README.md  pyproject.toml
aiqualin/: __init__.py  __main__.py
aiqualin/classes/: action.py  action_generator.py  animal.py  board.py  cli_player.py  color.py  game.py  game_scorer.py  indexable_enum.py  manual_game.py  player.py  simple_score_based_ai.py  tile.py  timer.py
aiqualin/tests/: test_action_generator.py  test_game_scorer.py
