[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiqualin"
authors = [{ name = "Panagiotis Karagiannis", email = "papalotis1@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["typing_extensions", "rich", "networkx"]

[project.optional-dependencies]
tests = ['pytest', "pyyaml", "lark"]
